--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,77 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: rgb(17, 155, 139);
+  padding-top: 25px;
+}
+
+#inputs {
+  display: inline-block;
+  margin: 20px;
+}
+
+.card {
+  width: 100px;
+  height: 150px;
+  display: inline-block;
+  background-color: white;
+  border-radius: 8px;
+  margin: 15px;
+  box-shadow: 1px 1px 8px black;
+}
+
+label {
+  font-size: 30px;
+  margin: 20px;
+  color: aliceblue;
+}
+
+#bubbleLabel {
+  margin: 40px;
+  color: aliceblue;
+}
+
+.middleNumber {
+  text-align: center;
+  padding: 25px 0;
+  font-size: 30px;
+}
+
+.topSuit {
+  margin: 4px;
+  font-size: 20px;
+  text-align: left;
+}
+
+.bottonSuit {
+  font-size: 20px;
+  text-align: right;
+  margin: 3px;
+}
+
+.button {
+  color: black;
+  border-radius: 10px;
+  padding: 8px;
+  font-size: 20px;
+  margin: 5px;
+}
+
+.button:hover {
+  background-color: red;
+}
+
+.newCard {
+  width: 100px;
+  height: 150px;
+  display: inline-block;
+  background-color: white;
+  border-radius: 8px;
+  margin: 10px;
+  box-shadow: 1px 1px 8px black;
+}
+
+.lines {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+}
